--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-    "python.pythonPath": "/Users/mo/.local/share/virtualenvs/python-server-uHSz7jG0/bin/python"
+    "python.pythonPath": "/Users/mo/.local/share/virtualenvs/python-server-uHSz7jG0/bin/python",
+    "sqltools.connections": [
+        {
+            "previewLimit": 50,
+            "driver": "SQLite",
+            "name": "Python Kennels",
+            "database": "${workspaceFolder:python-server}/kennel.db"
+        }
+    ],
+    "sqltools.useNodeRuntime": true
 }
